完成电话号码的显示和删除功能

--- a/src/PhoneBook-angular/src/app/persons/persons.component.html
+++ b/src/PhoneBook-angular/src/app/persons/persons.component.html
@@ -66,7 +66,7 @@
                                         <button (click)="editPerson(person)" title='编辑联系人' class="btn btn-circle btn-icon-only color-code green">
                                             <i class="icon-pencil"></i>
                                         </button>
-                                        <button (click)="editPhoneNumbers(person)" title='修改电话本内容' class="btn btn-circle btn-icon-only " href="javascript:;">
+                                        <button (click)="editPhoneNumbersByPerson(person)" title='修改电话本内容' class="btn btn-circle btn-icon-only " href="javascript:;">
                                             <i class="icon-calendar"></i>
                                         </button>
                                         <button (click)="delete(person)" title="删除联系人" class="btn btn-circle btn-icon-only red delete-person" href="javascript:;">
@@ -78,6 +78,53 @@
                                 <p class="list-group-item-text">
                                     电子邮箱：{{person.emailAddress}}</p>
 
+                                <div *ngIf="person==editingPerson" class="table-responsive">
+
+                                    <thead>
+                                        <tr>
+                                            <th style="width:10%">{{l('Actions')}}</th>
+                                            <th style="width:15%">{{l("Type")}}</th>
+                                            <th style="width:75%">{{l("PhoneNumber")}}</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr *ngFor="let phone of person.phoneNumbers">
+
+                                            <td>
+                                                <button (click)="deletePhoneNumer(phone, person)" class="btn btn-outline-danger m-btn m-btn--icon m-btn--icon-only m-btn--pill">
+                                                    <i class="fa fa-times"></i>
+                                                </button>
+                                            </td>
+                                            <td>{{phone.type}}</td>
+
+                                            <td>{{phone.number}}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <button (click)="savePhone()" class="btn btn-sm btn-success">
+                                                    <i class="fa fa-floppy-o"></i>
+                                                </button>
+                                            </td>
+                                            <td>
+                                                <select name="Type" [(ngModel)]="newPhoneNumber.type" class="form-control">
+
+                                                    <option *ngFor="let numberType of phonenumberTypeList" [value]=numberType.value>{{numberType.key}}</option>
+
+                                                    <!-- <option value="1">移动电话</option>
+                                                        <option value="2">家庭</option>
+                                                        <option value="3">公司</option> -->
+                                                </select>
+                                            </td>
+                                            <td>
+                                                <input type="text" name="number" [(ngModel)]="newPhoneNumber.number" class="form-control" />
+                                            </td>
+                                        </tr>
+                                    </tbody>
+
+
+
+                                </div>
 
 
                             </div>
